[gd_scene load_steps=39 format=2]

[ext_resource path="res://Images/Characters/Enemies/RileyBossEnemy.png" type="Texture" id=1]
[ext_resource path="res://Scene/GUI/ProjectilePointShooter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/Characters/Enemies/RileyBossEnemyDeath.png" type="Texture" id=3]
[ext_resource path="res://Script/CharacterScript/RileyEnemyBossScript.gd" type="Script" id=4]
[ext_resource path="res://Images/Effect/RileyShield.png" type="Texture" id=5]
[ext_resource path="res://Script/GuiScript/SummonShootNodeScript.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 16, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 16, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 16, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 32, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 48, 24, 16, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 16, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 16, 48, 16, 24 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 13 ), SubResource( 12 ), SubResource( 11 ), SubResource( 1 ) ],
"loop": false,
"name": "RaiseDead",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 10 ), SubResource( 9 ), SubResource( 6 ), SubResource( 5 ), SubResource( 4 ), SubResource( 1 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 13 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Laugh",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Teleport"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.65277, 0.852847 ), Vector2( 0.236422, 1.69049 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.607843 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "TeleportReverse"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.236422, 1.69049 ), Vector2( 1.65277, 0.852847 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.607843 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Flash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.482353 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.482353 ) ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 9, 9.5 )

[sub_resource type="Animation" id=21]
resource_name = "Flash"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="RileyEnemyBoss" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "Idle"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 15 )
anims/Teleport = SubResource( 16 )
anims/TeleportReverse = SubResource( 17 )

[node name="SummonTimer" type="Timer" parent="."]
wait_time = 12.0

[node name="RileyShield" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.482353 )
position = Vector2( 1, 1 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RileyShield"]
autoplay = "Flash"
anims/Flash = SubResource( 19 )
anims/RESET = SubResource( 20 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0.5 )
rotation = -0.00434329
shape = SubResource( 18 )

[node name="SummonShootNode" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="ProjectilePointShooter" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( 1, -11 )
rotation = -1.57006

[node name="ProjectilePointShooter2" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( 1, 13 )
rotation = -4.71239

[node name="ProjectilePointShooter3" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( 13, 1 )

[node name="ProjectilePointShooter4" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( -10, 1 )
rotation = 3.14159

[node name="ProjectilePointShooter5" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( -8, 8 )
rotation = 2.54791

[node name="ProjectilePointShooter6" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( -8, -6 )
rotation = 4.03056

[node name="ProjectilePointShooter7" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( 10, -6 )
rotation = 5.54793

[node name="ProjectilePointShooter8" parent="SummonShootNode" instance=ExtResource( 2 )]
position = Vector2( 10, 8 )
rotation = 7.08824

[node name="AnimationPlayer" type="AnimationPlayer" parent="SummonShootNode"]

[node name="SummonShootTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="FlashAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="SummonTimer" to="." method="_on_SummonTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="SummonShootTimer" to="." method="_on_SummonShootTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
