extends Node2D


func shoot():
	$ProjectilePointShooter.shoot()
	$ProjectilePointShooter2.shoot()
	$ProjectilePointShooter3.shoot()
	$ProjectilePointShooter4.shoot()
	$ProjectilePointShooter5.shoot()
	$ProjectilePointShooter6.shoot()
	$ProjectilePointShooter7.shoot()
	$ProjectilePointShooter8.shoot()
